07 part upgraded to grpc-gateway v2
