# 07-makefile/api/garage.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "api/garage.proto",
+    "title": "garage.proto",
     "version": "version not set"
   },
   "consumes": [
@@ -24,7 +24,7 @@
           "default": {
             "description": "An unexpected error response",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
@@ -56,7 +56,7 @@
           "default": {
             "description": "An unexpected error response",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
@@ -75,7 +75,7 @@
         ]
       }
     },
-    "/v1/workshop/cars/{car_number}": {
+    "/v1/workshop/cars/{carNumber}": {
       "get": {
         "operationId": "Workshop_RetrieveCar",
         "responses": {
@@ -88,13 +88,13 @@
           "default": {
             "description": "An unexpected error response",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
         "parameters": [
           {
-            "name": "car_number",
+            "name": "carNumber",
             "in": "path",
             "required": true,
             "type": "string"
@@ -105,7 +105,7 @@
         ]
       }
     },
-    "/v1/workshop/cars/{car_number}/paint": {
+    "/v1/workshop/cars/{carNumber}/paint": {
       "put": {
         "operationId": "Workshop_PaintCar",
         "responses": {
@@ -118,13 +118,13 @@
           "default": {
             "description": "An unexpected error response",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
         "parameters": [
           {
-            "name": "car_number",
+            "name": "carNumber",
             "in": "path",
             "required": true,
             "type": "string"
@@ -157,7 +157,7 @@
     "protobufAny": {
       "type": "object",
       "properties": {
-        "type_url": {
+        "typeUrl": {
           "type": "string"
         },
         "value": {
@@ -166,12 +166,9 @@
         }
       }
     },
-    "runtimeError": {
+    "rpcStatus": {
       "type": "object",
       "properties": {
-        "error": {
-          "type": "string"
-        },
         "code": {
           "type": "integer",
           "format": "int32"
@@ -196,7 +193,7 @@
         "owner": {
           "type": "string"
         },
-        "body_style": {
+        "bodyStyle": {
           "$ref": "#/definitions/Carbody"
         },
         "color": {
@@ -207,10 +204,10 @@
     "workshopPaintCarRequest": {
       "type": "object",
       "properties": {
-        "car_number": {
+        "carNumber": {
           "type": "string"
         },
-        "desired_color": {
+        "desiredColor": {
           "type": "string"
         }
       }
@@ -221,10 +218,10 @@
         "car": {
           "$ref": "#/definitions/workshopCar"
         },
-        "desired_color": {
+        "desiredColor": {
           "type": "string"
         },
-        "callback_service_address": {
+        "callbackServiceAddress": {
           "type": "string"
         }
       }
